change styles / add cv

--- a/index.html
+++ b/index.html
@@ -32,8 +32,8 @@
             <div class="information">
                 <a id="profileJob" href="https://www.linkedin.com/in/brenndalandim/"><i class="fa-solid fa-user"></i> Carregando...</a>
                 <p id="profileLocation"><i class="fa-solid fa-location-dot"></i>Carregando...</p>
-                <a id="profilePhone" target="_blank"><i class="fa-brands fa-whatsapp"></i>Carregando...</a>
                 <a id="profileEmail"><i class="fa-solid fa-envelope"></i>Carregando...</a>
+                <a id="profileCv" href="/assets/Currículo_Brennda_Landim.pdf" download="Currículo_Brennda_Landim.pdf"><i class="fa-solid fa-download"></i>Currículo</a>
             </div>
     
         </header>
