--- a/index.html
+++ b/index.html
@@ -30,7 +30,8 @@
             <h1 class="title" id="profileName">Carregando...</h1>
     
             <div class="information">
-                <a id="profileJob" href="https://www.linkedin.com/in/brenndalandim/"><i class="fa-solid fa-user"></i> Carregando...</a>
+                <a id="profileJob1" href="https://www.linkedin.com/in/brenndalandim/"><i class="fa-solid fa-user"></i> Carregando...</a>
+                <a id="profileJob2" href="https://www.linkedin.com/in/brenndalandim/"><i class="fa-solid fa-user"></i> Carregando...</a>
                 <p id="profileLocation"><i class="fa-solid fa-location-dot"></i>Carregando...</p>
                 <a id="profileEmail"><i class="fa-solid fa-envelope"></i>Carregando...</a>
                 <a id="profileCv" href="/assets/Currículo_Brennda_Landim.pdf" download="Currículo_Brennda_Landim.pdf"><i class="fa-solid fa-download"></i>Currículo</a>
@@ -115,4 +116,5 @@
     <script src="assets/js/main.js"></script>
     <script src="assets/js/acordeon.js"></script>
 </body>
+
 </html>
